<resources>
  <string name="app_name">Starly pancake</string>
  <string name="title_activity_login">Sign in</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="no_internet_error_message">No Internet connection available. Please try again</string>
  <string name="sign_in">Войти</string>
  <string name="password">Пароль</string>
  <string name="confirm_password">Подтвердить Пароль</string>
  <string name="login">Логин</string>
  <string name="sign_up">Зарегистрироваться</string>
  <string name="indexes_photo_format">%1$d из %2$d</string>
  <string name="maps_api_key">AIzaSyB3yYK5E6BAgY87Y47zNd60TE3MBjNrvok</string>
  <string name="menu">Меню</string>
  <string name="maps">Карта</string>
  <string name="privacy_policy">Политика конфиденциальности</string>
  <string name="user_conditions">Пользовательское соглашение</string>
  <string name="created_by_vladislav_provalionok">Created by Vladislav Provalionok</string>
  <string name="logout">Выйти</string>
  <string name="ok">Ok</string>
  <string name="your_organizations">Ваши заведения</string>
  <string name="name_organization">Название</string>
  <string name="latitude">Широта</string>
  <string name="longitude">Долгота</string>
  <string name="description">Описание</string>
  <string name="main_link_photo_organization">Ссылка на главную фотографию заведения</string>
  <string name="create">Создать</string>
  <string name="link_photos">Ссылки на фотографии</string>
</resources>
